--- a/index.html
+++ b/index.html
@@ -1,102 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Background Slider</title>
+  </head>
+  <body>
+    <div class="slider-container">
+      <div
+        class="slide active"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1501139083538-0139583c060f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1548438294-1ad5d5f4f063?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80');
+        "
+      ></div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+      <div
+        class="slide"
+        style="
+          background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAhJIp-xIlWPfRqBwMJ9LrjBNpGiZRCUmNOxLYt9BLTFkADhbJMug5PDg-YngXGUU4zxY&usqp=CAU');
+        "
+      ></div>
 
-<body>
-    <div class="box">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="box-part text-center">
-                        <i class="fa fa-instagram fa-3x"></i>
-                        <h4>Instagram</h4>
-                        <div class="text">
-                            <span>Lorem ipsum dolor sit amet consectetur.
-                                adipisicing elicit.A quas officia natus.
-                                adipisci blanditiis ratione odio volvo.
-                            </span>
-                        </div>
-                        <a href="https://www.instagram.com" target="blank">Learn More</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="box-part text-center">
-                        <i class="fa fa-twitter fa-3x"></i>
-                        <h4>Twitter</h4>
-                        <div class="text">
-                            <span>Lorem ipsum dolor sit amet consectetur.
-                                adipisicing elicit.A quas officia natus.
-                                adipisci blanditiis ratione odio volvo.
-                            </span>
-                        </div>
-                        <a href="https://www.twitter.com" target="blank">Learn More</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="box-part text-center">
-                        <i class="fa fa-facebook fa-3x"></i>
-                        <h4>Facebook</h4>
-                        <div class="text">
-                            <span>Lorem ipsum dolor sit amet consectetur.
-                                adipisicing elicit.A quas officia natus.
-                                adipisci blanditiis ratione odio volvo.
-                            </span>
-                        </div>
-                        <a href="https://www.Facebook.com" target="blank">Learn More</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="box-part text-center">
-                        <i class="fa fa-pinterest-p fa-3x"></i>
-                        <h4>Pinterest</h4>
-                        <div class="text">
-                            <span>Lorem ipsum dolor sit amet consectetur.
-                                adipisicing elicit.A quas officia natus.
-                                adipisci blanditiis ratione odio volvo.
-                            </span>
-                        </div>
-                        <a href="https://www.Pinterest.com" target="blank">Learn More</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="box-part text-center">
-                        <i class="fa fa-google fa-3x"></i>
-                        <h4>Google</h4>
-                        <div class="text">
-                            <span>Lorem ipsum dolor sit amet consectetur.
-                                adipisicing elicit.A quas officia natus.
-                                adipisci blanditiis ratione odio volvo.
-                            </span>
-                        </div>
-                        <a href="https://www.google.com" target="blank">Learn More</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="box-part text-center">
-                        <i class="fa fa-github fa-3x"></i>
-                        <h4>Github</h4>
-                        <div class="text">
-                            <span>Lorem ipsum dolor sit amet consectetur.
-                                adipisicing elicit.A quas officia natus.
-                                adipisci blanditiis ratione odio volvo.
-                            </span>
-                        </div>
-                        <a href="https://www.github.com" target="blank">Learn More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+      <div
+        class="slide"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1536623975707-c4b3b2af565d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFybW9ueXxlbnwwfHwwfHw%3D&w=1000&q=80');
+        "
+      ></div>
+
+      <div
+        class="slide"
+        style="
+          background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQeuij-M3cGDBmKAL2-j38nMDIXYQxszbrA-Q&usqp=CAU');
+        "
+      ></div>
+
+      <button class="arrow left-arrow" id="left">
+        <i class="fas fa-arrow-left"></i>
+      </button>
+
+      <button class="arrow right-arrow" id="right">
+        <i class="fas fa-arrow-right"></i>
+      </button>
     </div>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
