--- a/index.html
+++ b/index.html
@@ -3,59 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="style.css" />
-    <title>Background Slider</title>
+    <title>Image Carousel</title>
+    
   </head>
   <body>
-    <div class="slider-container">
-      <div
-        class="slide active"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1501139083538-0139583c060f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
-        "
-      ></div>
-      <div
-        class="slide"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1548438294-1ad5d5f4f063?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80');
-        "
-      ></div>
+    <div class="carousel">
+      <div class="image-container" id="imgs">
+        <img src="https://media.istockphoto.com/photos/start-2022-written-on-highway-road-in-the-middle-of-empty-asphalt-of-picture-id1345969241"
+       alt="first-image"
+       />
+    <img
+       src="https://media.istockphoto.com/photos/eyeglasses-during-optometric-examination-concept-with-wooden-table-picture-id1286841517?s=612x612"
+       alt="second-image"
+       />
+    <img
+       src="https://media.istockphoto.com/photos/spiral-clock-the-flow-of-time-dark-blue-turquoise-picture-id1341635109"
+       alt="third-image"
+       />
+    <img
+       src="https://media.istockphoto.com/photos/success-yellow-arrow-on-black-arrows-background-standing-out-from-the-picture-id1340302765"
+       alt="fourth-image"
+       />
+      </div>
 
-      <div
-        class="slide"
-        style="
-          background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAhJIp-xIlWPfRqBwMJ9LrjBNpGiZRCUmNOxLYt9BLTFkADhbJMug5PDg-YngXGUU4zxY&usqp=CAU');
-        "
-      ></div>
-
-      <div
-        class="slide"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1536623975707-c4b3b2af565d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFybW9ueXxlbnwwfHwwfHw%3D&w=1000&q=80');
-        "
-      ></div>
-
-      <div
-        class="slide"
-        style="
-          background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQeuij-M3cGDBmKAL2-j38nMDIXYQxszbrA-Q&usqp=CAU');
-        "
-      ></div>
-
-      <button class="arrow left-arrow" id="left">
-        <i class="fas fa-arrow-left"></i>
-      </button>
-
-      <button class="arrow right-arrow" id="right">
-        <i class="fas fa-arrow-right"></i>
-      </button>
+      <div class="buttons-container">
+        <button id="left" class="btn">Prev</button>
+        <button id="right" class="btn">Next</button>
+      </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
